Change 'lorem' text to better boilerplate. Correct text overflow on menu items subheadings. Play with font sizes to make menucards look a bit better

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -8,4 +8,7 @@
     @extend %shadow;
     // border: 1px solid red;
     margin-block: size(32);
+    display: grid;
+    // Line things up instead of using subgrid
+    grid-template-rows: min-content 1fr min-content;
 }
