--- a/sass/layout/_headers.scss
+++ b/sass/layout/_headers.scss
@@ -23,7 +23,7 @@ h2 {
     font-weight: fw(regular);
     line-height: 1.2;
     position: relative;
-    max-width: 500px;
+    width: fit-content;
     margin-inline: auto;
 }
 
